--- a/var_five.html
+++ b/var_five.html
@@ -8,19 +8,24 @@
 </head>
 
 <body>
-  <p><b>Think that snow is falling.</b></p>
+  <p><br>Think that snow is falling.</br></p>
   <p>Think</p>
   <p>&nbsp;&nbsp;&nbsp;that</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;snow</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;falling</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;everywhere</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;everywhere</p>
+    <br></br>
+      <br></br>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;all</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;time.</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the</p>
+  <p>&nbsp;&nbsp;time.</p>
 
   <p>When you talk with a person, think that snow is falling &nbsp;&nbsp;&nbsp; between &nbsp;&nbsp;&nbsp; you &nbsp;&nbsp;&nbsp; and &nbsp;&nbsp;&nbsp; on &nbsp;&nbsp;&nbsp; the &nbsp;&nbsp;&nbsp; person.</p>
-  <p>Stop covering when you think the person is <b> covered by snow.</b></p>
+  <p>Stop covering when you think the person is <br> covered by snow.</br></p>
+  <br></br>
+    <br></br>
+
 </body>
 
 </html>
