--- a/var_four.html
+++ b/var_four.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body>
-  <p><b>Think that snow is falling.</b></p>
+<brody>
+  <p><br>Think that snow is falling.</br></p>
   <p>Think</p>
   <p>&nbsp;&nbsp;&nbsp;that</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;snow</p>
@@ -20,7 +20,7 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;time.</p>
 
   <p>When you talk with a person, think that snow is falling &nbsp;&nbsp;&nbsp; between &nbsp;&nbsp;&nbsp; you &nbsp;&nbsp;&nbsp; and &nbsp;&nbsp;&nbsp; on &nbsp;&nbsp;&nbsp; the &nbsp;&nbsp;&nbsp; person.</p>
-  <p>Stop covering when you think the person is <b> covered by snow.</b></p>
-</body>
+  <p>Stop covering when you think the person is <br> covered by snow.</br></p>
+</brody>
 
 </html>
