feat: complete Level 2 of project

--- a/var_seven.html
+++ b/var_seven.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <title>Vartiation 2 - Yoko Ono</title>
+  <title>Vartiation 6 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
 <body>
-  <p>Think that snow is falling.</p>
-  <p>Think that snow is falling everywhere all the time.</p>
-  <p>When you talk with a person, think that snow is falling between you and on the person.</p>
-  <p>Stop covering when you think the person is covered by snow. </p>
+  <div><p><h3>Think</h3> that snow is falling.</p></div>
+  <div>Think that snow is falling everywhere all the time.</div>
+  <span><p>When you <h6>talk</h6> with a person, think that snow is falling between you <br> and on </br>the person.</p></span>
+  <div><p>Stop covering when you think the person is covered by snow. </p></div>
 </body>
 
 </html>
