--- a/var_eight.html
+++ b/var_eight.html
@@ -2,16 +2,20 @@
 <html>
 
 <head>
-  <title>Vartiation 2 - Yoko Ono</title>
+  <title>Vartiation 1 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
 <body>
-  <p>Think that snow is falling.</p>
-  <p>Think that snow is falling everywhere all the time.</p>
-  <p>When you talk with a person, think that snow is falling between you and on the person.</p>
-  <p>Stop covering when you think the person is covered by snow. </p>
+  <ul>
+    <li>Think that snow is falling.</li>
+  </ul>
+  Think that snow is falling everywhere all the time.
+  <ol>
+    <li>When you talk with a person, think that snow is falling between you and on the person.</li>
+  </ul>
+  Stop covering when you think the person is covered by snow.
 </body>
 
 </html>
