feat: link remaining veriations to home page

--- a/var_home.html
+++ b/var_home.html
@@ -35,6 +35,21 @@
     <li><a href="var_eight.html">Variation 8</a></li>
     <li><a href="var_nine.html">Variation 9</a></li>
     <li><a href="var_ten.html">Variation 10</a></li>
+    <li><a href="var_eleven.html">Variation 11</a></li>
+    <li><a href="var_twelve.html">Variation 12</a></li>
+    <li><a href="var_thirteen.html">Variation 13</a></li>
+    <li><a href="var_fourteen.html">Variation 14</a></li>
+    <li><a href="var_fifteen.html">Variation 15</a></li>
+    <li><a href="var_sixteen.html">Variation 16</a></li>
+    <li><a href="var_seventeen.html">Variation 17</a></li>
+    <li><a href="var_eighteen.html">Variation 18</a></li>
+    <li><a href="var_nineteen.html">Variation 19</a></li>
+    <li><a href="var_twenty.html">Variation 20</a></li>
+    <li><a href="var_twentyone.html">Variation 21</a></li>
+    <li><a href="var_twentytwo.html">Variation 22</a></li>
+    <li><a href="var_twentythree.html">Variation 23</a></li>
+    <li><a href="var_twentyfour.html">Variation 24</a></li>
+    <li><a href="var_twentyfive.html">Variation 25</a></li>
   </ol>
 
 
