feat: complete Levels 3 and 4 of project

--- a/var_eleven.html
+++ b/var_eleven.html
@@ -7,7 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body>
+<body style="
+    border: 10px ridge aliceblue;
+    padding: 10px;
+">
+  <h1 style="float:left; position:fixed; top: 90px; left:30px;">❄</h1>
+  <h1 style="float:left; position:fixed; top: 20px; left:310px;">❄</h1>
+  <h1 style="float:left; position:fixed; top: 33px; left:190px;">❄</h1>
+  <h1 style="float:left; position:fixed; top: 95px; left:560px;">❄</h1>
+  <h1 style="float:left; position:fixed; top: 18px; left:30px;">❄</h1>
   <p>Think that snow is falling.</p>
   <p>Think that snow is falling everywhere all the time.</p>
   <p>When you talk with a person, think that snow is falling between you and on the person.</p>
