--- a/var_eighteen.html
+++ b/var_eighteen.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<body style="text-align: center;font-family: cursive;">
+  <p style="line-height:40px;font-size: smaller;padding: 30px;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">Think that snow is falling.</span></span></span></p>
+  <p style="line-height:60px;font-size: medium;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">Think that snow is <b> falling everywhere</b> all the time.</span></span></span></p>
+  <p style="line-height:70px;font-size: x-large;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</span></span></span></p>
+  <p style="line-height:80px;font-size: xxx-large;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">Stop covering when you think the person is covered by <b>snow.</b></span></span></span></p>
 </body>
 
 </html>
