--- a/var_fifteen.html
+++ b/var_fifteen.html
@@ -5,13 +5,23 @@
   <title>Vartiation 15 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<body style="border: 1px dotted;padding: 25px 0px 157px 47px;">
+  <p style="padding: 0px 0px 25px 0px;"> Think that
+    <span style="border: 2px dotted paleturquoise;padding: 2px;"><span style="border: 2px dotted paleturquoise;padding: 15px;"><span style="border: 2px dotted paleturquoise;padding: 2px;">snow</span></span></span> is
+    <span style="border: 7px inset lightgray;">falling</span>.</p>
+  <p style="padding: 0px 0px 50px 0px;">Think that
+      <span style="border: 2px dotted paleturquoise;padding: 2px;"><span style="border: 2px dotted paleturquoise;padding: 15px;"><span style="border: 2px dotted paleturquoise;padding: 35px;">snow</span></span></span>
+ is <span style="border: 7px inset lightgray;">falling</span> everywhere all the time.</p>
+  <p style="padding: 0px 0px 100px 0px;">When you talk with a person, think that
+
+  <span style="border: 2px dotted paleturquoise;padding: 4px;"><span style="border: 2px dotted paleturquoise;padding: 30px;"><span style="border: 2px dotted paleturquoise;padding: 70px;">snow</span></span></span>
+    is <span style="border: 7px inset lightgray;">falling</span> between you and on the person </p>
+  <p>Stop covering when you think the person is covered by
+
+    <span style="border: 2px dotted paleturquoise;padding: 8px;"><span style="border: 2px dotted paleturquoise;padding: 60px;"><span style="border: 2px dotted paleturquoise;padding: 140px;">snow</span></span></span>
 </body>
 
 </html>
