--- a/var_nineteen.html
+++ b/var_nineteen.html
@@ -6,12 +6,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
-
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
-</body>
+<div style = "border: 0.003px ridge red">
+  <div style = "border: 0.030px ridge red">
+    <div style = "border: 0.3px ridge red">
+      <div style = "border: 3px ridge red">
+        <div style = "border: 30px ridge red">
+          <div style = "border: 300px ridge red">
+          <body style="letter-spacing: -3px;text-align: right;text-transform: uppercase;font-family: monospace;font-size: xxx-large;font-style: italic;">
+            <p>Think that snow is <b>falling.</b></p>
+            <p>Think that snow is <b> falling everywhere</b> all the time.</p>
+            <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+            <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+          </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
