--- a/var_sixteen.html
+++ b/var_sixteen.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<body style="text-align: center; letter-spacing: 15px;">
+  <p style="line-height: 50;">Think that snow is <b>falling.</b></p>
+  <p style="line-height: 50;">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p style="line-height: 50;">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p style="line-height: 50;">Stop covering when you think the person is covered by <b><a href="#">snow</a>.</b></p>
 </body>
 
 </html>
