--- a/var_ten.html
+++ b/var_ten.html
@@ -5,26 +5,18 @@
   <title>Vartiation 10 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 </head>
 
-<body>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Think</em> that snow is <strong><h1>falling.</h1></strong></p>
-  <br></br>
-  <p><em>Think</em> that <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;snow</h1>
-    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is</h2>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;falling</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;everywhere</h4>
-     <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;all</h5> <h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the</h6> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;time.</p>
-  <br></br><br></br>
-
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;When <br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;you <br></br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;talk<br></br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with<br></br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a <br></br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;person,<br></br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; think that snow is falling between you and on the person.</p>
-  <br></br><br></br>
-  <p><em><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stop</h1></em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;covering when you <a href="#"><em>think</em></a>  the person is covered by snow.</p>
+<body style="border: 1px dashed;padding: 10px;">
+  <p style="padding: 0px 0px 25px 0px;"> Think that <span style="border: 10px dotted paleturquoise;padding: 2px;
+">snow</span> is <span style="border: 7px inset lightgray;">falling</span>.</p>
+  <p style="padding: 0px 0px 50px 0px;">Think that <span style="border: 10px dotted paleturquoise;padding: 2px;
+">snow</span> is <span style="border: 7px inset lightgray;">falling</span> everywhere all the time.</p>
+  <p style="padding: 0px 0px 100px 0px;">When you talk with a person, think that <span style="border: 10px dotted paleturquoise;padding: 2px;
+">snow</span> is <span style="border: 7px inset lightgray;">falling</span> between you and on the person </p>
+  <p>Stop covering when you think the person is covered by <span style="border: 10px dotted paleturquoise;padding: 2px;
+">snow</span>.</p>
 </body>
 
 </html>
