--- a/var_thirteen.html
+++ b/var_thirteen.html
@@ -7,11 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body>
-  <p>Think that snow is falling.</p>
-  <p>Think that snow is falling everywhere all the time.</p>
-  <p>When you talk with a person, think that snow is falling between you and on the person.</p>
-  <p>Stop covering when you think the person is covered by snow. </p>
+<body style="
+    height: 1500px;
+">
+
+  <p><span style="position:fixed;left: 720px;">______  _______  ______<h1>Think that snow</h1></span> <br><br>
+    <span style="position:fixed;top: 100px;left: 1020px;">is falling.</span></p>
+  <p><span style="position:fixed;top: 200px;left: 1200px;">_______<h1>Think</h1></span> <br><br>
+    <span style="position:fixed;top: 300px;left: 1300px;">that snow is</span><br><br>
+    <span style="position: fixed;left: 1100px;top: 420px;
+">falling everywhere</span> <br><br>
+    <span style="position: fixed;top: 540px;left: 900px;"> all the time.</span></p>
+  <p>
+    <span style="position:fixed;top: 600px;left: 670px;">When you talk </span><br><br>
+    <span style="position: fixed;top: 540px;left: 400px;">with a person, ______  ______<h1>think that</h1></span><br><br>
+    <span style="position:fixed;left: 200px;top: 420px;">snow is falling</span> <br><br>
+    <span style="position: fixed;">between you and on the person.</span></p>
+  <p><span style="position:fixed;left: 200px;top: 230px;">Stop covering when you</span> <br><br>
+    <span style="position: fixed;top: 150px;left: 400px;"> _______  ______  ______<h1>think the person </h1> </span><br><br>
+    <span style="position: fixed;top: 220px;left: 500px;">is covered by snow.</span></p>
 </body>
 
 </html>
