--- a/var_twenty.html
+++ b/var_twenty.html
@@ -8,10 +8,26 @@
 </head>
 
 <body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+  <ul>
+    <li> <span style="letter-spacing: 20px;"> <p style="border: 5px dashed aliceblue;">Think that snow is <b>falling.</b></span></p>
+      <ul>
+        <li> <span style="letter-spacing: 0px;">  <p style="border: 5px dashed paleturquoise;">Think that snow is <b> falling everywhere</b> all the time.</span></p>
+          <ul>
+            <li><span style="letter-spacing: 20px;">
+              <p style="border: 5px dashed turquoise;">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</span></p>
+              <ul>
+                <li>
+<span style="letter-spacing: 0px;">
+                  <p style="border: 5px dashed dodgerblue;">Stop covering when you think the person is covered by <b style="border: 5px dashed darkblue;">snow.</b></span></p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
 </body>
 
 </html>
