--- a/var_twentyfive.html
+++ b/var_twentyfive.html
@@ -5,13 +5,33 @@
   <title>Vartiation 25 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
-
+<!--
 <body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
-</body>
+  <p class="animated  bounce">Think that snow is <b>falling.</b></p>
+  <p class="animated infinite bounce">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated  bounce">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated infinite bounce">Stop covering when you think the person is covered by <b>snow.</b></p>
+</body> -->
+<body style="text-align: center;background-color: rgb(136, 141, 254);">
+<div style = "border: 0.003px ridge red">
+  <div style = "border: 0.030px round orange">
+    <div style = "border: 0.3px ridge yellow">
+      <div style = "border: 3px round green">
+        <div style = "border: 30px ridge purple">
+          <div style = "border: 300px round violet">
+          <body style="letter-spacing: -3px;text-align: right;text-transform: uppercase;font-family: monospace;font-size: xxx-large;font-style: italic;">
+            <p class="animated infinite wobble">Think that snow is <b>falling.</b></p>
+            <p class="animated infinite bounce">Think that snow is <b> falling everywhere</b> all the time.</p>
+            <p class="animated infinite tada">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+            <p class="animated infinite wobble"> Stop covering when you think the person is covered by <b>snow.</b></p>
+          </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div></body>
 
 </html>
