--- a/var_twentyfour.html
+++ b/var_twentyfour.html
@@ -5,13 +5,33 @@
   <title>Vartiation 24 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<!-- <body>
+  <p class="animated infinite bounce">Think that snow is <b>falling.</b></p>
+  <p class="animated infinite bounce">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated infinite bounce">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated infinite bounce">Stop covering when you think the person is covered by <b>snow.</b></p>
+</body> -->
+<body style="text-align: center;background-color: rgb(170, 112, 254);">
+<div style = "border: 10px ridge gray">
+  <div style = "border: 10px ridge black">
+    <div style = "border: 10px round gray">
+      <div style = "border: 10px ridge black">
+        <div style = "border: 10px inset black">
+          <div style = "border: 10px ridge black">
+          <body style="text-align: center; letter-spacing: -1px;">
+            <p class="animated infinite bounceInDown" style="line-height: 0;">Think that snow is <b>falling.</b></p>
+            <p class="animated infinite flash" style="line-height: 5;">Think that snow is <b> falling everywhere</b> all the time.</p>
+            <p class="animated infinite rubberBand" style="line-height: 0;">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+            <p class="animated infinite bounceInUp" style="line-height: 1;">Stop covering when you think the person is covered by <b><a href="#">snow</a>.</b></p>
+          </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
-
 </html>
