--- a/var_twentythree.html
+++ b/var_twentythree.html
@@ -5,13 +5,30 @@
   <title>Vartiation 23 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<body style="text-align: center;background-color: rgb(192, 82, 244);">
+
+  <p class="animated rollIn">Think that snow is <b>falling.</b></p>
+  <p class="animated rollOut">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated rollOut">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated rollOut">Stop covering when you think the person is covered by <b>snow.</b></p>
+
+  <p class="animated rollIn">Think that snow is <b>falling.</b></p>
+  <p class="animated rollIn">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated rollOut">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated rollOut">Stop covering when you think the person is covered by <b>snow.</b></p>
+
+  <p class="animated rollIn">Think that snow is <b>falling.</b></p>
+  <p class="animated rollIn">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated rollIn">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated rollOut">Stop covering when you think the person is covered by <b>snow.</b></p>
+
+  <p class="animated rollIn">Think that snow is <b>falling.</b></p>
+  <p class="animated rollIn">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated rollIn">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated rollIn">Stop covering when you think the person is covered by <b>snow.</b></p>
 </body>
 
 </html>
