--- a/var_twentytwo.html
+++ b/var_twentytwo.html
@@ -5,13 +5,14 @@
   <title>Vartiation 22 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-<body>
-  <p>Think that snow is <b>falling.</b></p>
-  <p>Think that snow is <b> falling everywhere</b> all the time.</p>
-  <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
-  <p>Stop covering when you think the person is covered by <b>snow.</b></p>
+<body style="text-align: center;background-color: rgb(150, 161, 245);">
+  <p class="animated infinite zoomInDown">Think that snow is <b>falling.</b></p>
+  <p class="animated infinite zoomInLeft">Think that snow is <b> falling everywhere</b> all the time.</p>
+  <p class="animated infinite zoomInRight">When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
+  <p class="animated infinite zoomInUp">Stop covering when you think the person is covered by <b>snow.</b></p>
 </body>
 
 </html>
