feat: implement attempt one for a consistent page device

--- a/var_home.html
+++ b/var_home.html
@@ -52,6 +52,10 @@
     <li><a href="var_twentyfive.html">Variation 25</a></li>
   </ol>
 
+  See Also:
+  <a href="sample.html">Previous CPG (Consistent Page Device)</a>
+
+
 
   <footer class="mt-auto text-black-50 text-center">
     <p style="margin-top: 2rem;margin-bottom: 2rem;">
