feat: complete CPD

--- a/var_eighteen.html
+++ b/var_eighteen.html
@@ -5,8 +5,15 @@
   <title>Vartiation 18 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
+
+<nav>
+  <a href="var_seventeen.html" class="bottom">Previous : Variation 17</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_nineteen.html" class="bottom">Next : Variation 19</a>
+</nav>
 <body style="text-align: center;font-family: cursive;">
   <p style="line-height:40px;font-size: smaller;padding: 30px;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">Think that snow is falling.</span></span></span></p>
   <p style="line-height:60px;font-size: medium;"><span style="padding: 10px;border: 2px outset aliceblue;"><span style="padding: 10px;border: 10px outset aliceblue;"><span style="padding: 5px;border: 20px outset aliceblue;">Think that snow is <b> falling everywhere</b> all the time.</span></span></span></p>
