--- a/var_fifteen.html
+++ b/var_fifteen.html
@@ -5,8 +5,15 @@
   <title>Vartiation 15 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 
 </head>
+
+<nav>
+  <a href="var_fourteen.html" class="bottom">Previous : Variation 14</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_sixteen.html" class="bottom">Next : Variation 16</a>
+</nav>
 
 <body style="border: 1px dotted;padding: 25px 0px 157px 47px;">
   <p style="padding: 0px 0px 25px 0px;"> Think that
