--- a/var_five.html
+++ b/var_five.html
@@ -5,9 +5,15 @@
   <title>Vartiation 5 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_four.html" class="bottom">Previous : Variation 4</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_six.html" class="bottom">Next : Variation 6</a>
+  </nav>
   <p><br>Think that snow is falling.</br></p>
   <p>Think</p>
   <p>&nbsp;&nbsp;&nbsp;that</p>
