--- a/var_four.html
+++ b/var_four.html
@@ -5,11 +5,17 @@
   <title>Vartiation 4 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
-<brody>
+<body>
+  <nav>
+    <a href="var_three.html" class="bottom">Previous : Variation 3</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_five.html" class="bottom">Next : Variation 5</a>
+  </nav>
   <p><br>Think that snow is falling.</br></p>
-  <p>Think</p>
+  <p>Think</v>
   <p>&nbsp;&nbsp;&nbsp;that</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;snow</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is</p>
@@ -21,6 +27,6 @@
 
   <p>When you talk with a person, think that snow is falling &nbsp;&nbsp;&nbsp; between &nbsp;&nbsp;&nbsp; you &nbsp;&nbsp;&nbsp; and &nbsp;&nbsp;&nbsp; on &nbsp;&nbsp;&nbsp; the &nbsp;&nbsp;&nbsp; person.</p>
   <p>Stop covering when you think the person is <br> covered by snow.</br></p>
-</brody>
+</body>
 
 </html>
