--- a/var_fourteen.html
+++ b/var_fourteen.html
@@ -5,8 +5,14 @@
   <title>Vartiation 14 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
+<nav>
+  <a href="var_thirteen.html" class="bottom">Previous : Variation 13</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_fifteen.html" class="bottom">Next : Variation 15</a>
+</nav>
 <body style="
     height: 972px;
   flex-direction: column-reverse;
