--- a/var_home.html
+++ b/var_home.html
@@ -53,7 +53,7 @@
   </ol>
 
   See Also:
-  <a href="sample.html">Previous CPG (Consistent Page Device)</a>
+  <a href="sample.html">Previous CPD (Consistent Page Device)</a>
 
 
 
