--- a/var_nine.html
+++ b/var_nine.html
@@ -5,9 +5,15 @@
   <title>Vartiation 9 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_eight.html" class="bottom">Previous : Variation 8</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_ten.html" class="bottom">Next : Variation 10</a>
+  </nav>
   <ul>
     <br></br>
     <!-- <br></br> -->
