--- a/var_nineteen.html
+++ b/var_nineteen.html
@@ -5,7 +5,14 @@
   <title>Vartiation 19 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_eighteen.html" class="bottom">Previous : Variation 18</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twenty.html" class="bottom">Next : Variation 20</a>
+</nav>
 <div style = "border: 0.003px ridge red">
   <div style = "border: 0.030px ridge red">
     <div style = "border: 0.3px ridge red">
