--- a/var_seven.html
+++ b/var_seven.html
@@ -5,9 +5,15 @@
   <title>Vartiation 7 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_six.html" class="bottom">Previous : Variation 6</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_eight.html" class="bottom">Next : Variation 8</a>
+  </nav>
   <div><p><h3>Think</h3> that snow is falling.</p></div>
   <div>Think that snow is falling everywhere all the time.</div>
   <span><p>When you <h6>talk</h6> with a person, think that snow is falling between you <br> and on </br>the person.</p></span>
