--- a/var_ten.html
+++ b/var_ten.html
@@ -5,8 +5,14 @@
   <title>Vartiation 10 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 
 </head>
+<nav>
+  <a href="var_nine.html" class="bottom">Previous : Variation 9</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_eleven.html" class="bottom">Next : Variation 11</a>
+</nav>
 
 <body style="border: 1px dashed;padding: 10px;">
   <p style="padding: 0px 0px 25px 0px;"> Think that <span style="border: 10px dotted paleturquoise;padding: 2px;
