--- a/var_thirteen.html
+++ b/var_thirteen.html
@@ -5,7 +5,14 @@
   <title>Vartiation 13 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_twelve.html" class="bottom">Previous : Variation 12</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_fourteen.html" class="bottom">Next : Variation 14</a>
+</nav>
 
 <body style="
     height: 1500px;
