--- a/var_three.html
+++ b/var_three.html
@@ -5,9 +5,15 @@
   <title>Vartiation 3 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_two.html" class="bottom">Previous : Variation 2</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_four.html" class="bottom">Next : Variation 4</a>
+  </nav>
   <p>Think that snow is <b>falling.</b></p>
   <p>Think that snow is <b> falling everywhere</b> all the time.</p>
   <p>When you talk with a person, think that snow is <b>falling between you and on the person </b>.</p>
