--- a/var_twenty.html
+++ b/var_twenty.html
@@ -5,7 +5,14 @@
   <title>Vartiation 20 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_nineteen.html" class="bottom">Previous : Variation 19</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twentyone.html" class="bottom">Next : Variation 21</a>
+</nav>
 
 <body>
   <ul>
