--- a/var_twentyfour.html
+++ b/var_twentyfour.html
@@ -6,8 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="varcss.css">
 </head>
-
+<nav>
+  <a href="var_twentythree.html" class="bottom">Previous : Variation 23</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twentyfive.html" class="bottom">Next : Variation 25</a>
+</nav>
 <!-- <body>
   <p class="animated infinite bounce">Think that snow is <b>falling.</b></p>
   <p class="animated infinite bounce">Think that snow is <b> falling everywhere</b> all the time.</p>
