--- a/var_two.html
+++ b/var_two.html
@@ -5,9 +5,15 @@
   <title>Vartiation 2 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_one.html" class="bottom">Previous : Variation 1</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_three.html" class="bottom">Next : Variation 3</a>
+  </nav>
   <p>Think that snow is falling.</p>
   <p>Think that snow is falling everywhere all the time.</p>
   <p>When you talk with a person, think that snow is falling between you and on the person.</p>
