--- a/var_eight.html
+++ b/var_eight.html
@@ -5,17 +5,23 @@
   <title>Vartiation 8 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_seven.html" class="bottom">Previous : Variation 7</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_nine.html" class="bottom">Next : Variation 9</a>
+  </nav>
   <ul>
     <li>Think that snow is falling.</li>
   </ul>
   Think that snow is falling everywhere all the time.
   <ol>
     <li>When you talk with a person, think that snow is falling between you and on the person.</li>
-  </ul>
-  Stop covering when you think the person is covered by snow.
+    </ul>
+    Stop covering when you think the person is covered by snow.
 </body>
 
 </html>
