--- a/var_eleven.html
+++ b/var_eleven.html
@@ -5,7 +5,15 @@
   <title>Vartiation 11 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_ten.html" class="bottom">Previous : Variation 10</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twelve.html" class="bottom">Next : Variation 12</a>
+</nav>
+
 
 <body style="
     border: 10px ridge aliceblue;
