--- a/var_seventeen.html
+++ b/var_seventeen.html
@@ -5,7 +5,14 @@
   <title>Vartiation 17 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_sixteen.html" class="bottom">Previous : Variation 16</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_eighteen.html" class="bottom">Next : Variation 18</a>
+</nav>
 
 <div style = "border: 10px ridge blue">
   <div style = "border: 10px ridge turquoise">
