--- a/var_six.html
+++ b/var_six.html
@@ -5,9 +5,15 @@
   <title>Vartiation 6 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
 
 <body>
+  <nav>
+    <a href="var_five.html" class="bottom">Previous : Variation 5</a>
+    <a href="var_home.html" class="bottom home">Home</a>
+    <a href="var_seven.html" class="bottom">Next : Variation 7</a>
+  </nav>
   <div><p><h1>Think</h1> that snow is falling.</p></div>
   <div><p>Think that snow is falling everywhere all the time.</p></div>
   <span><p>When you <h1>talk</h1> with a person, think that snow is falling between you and on the person.</p></span>
