--- a/var_sixteen.html
+++ b/var_sixteen.html
@@ -5,7 +5,14 @@
   <title>Vartiation 16 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_fifteen.html" class="bottom">Previous : Variation 15</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_seventeen.html" class="bottom">Next : Variation 17</a>
+</nav>
 
 <body style="text-align: center; letter-spacing: 15px;">
   <p style="line-height: 50;">Think that snow is <b>falling.</b></p>
