--- a/var_twelve.html
+++ b/var_twelve.html
@@ -5,7 +5,14 @@
   <title>Vartiation 12 - Yoko Ono</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_eleven.html" class="bottom">Previous : Variation 11</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_thirteen.html" class="bottom">Next : Variation 13</a>
+</nav>
 
 <body style="
     height: 972px;
