--- a/var_twentyfive.html
+++ b/var_twentyfive.html
@@ -6,7 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+<nav>
+  <a href="var_twentythree.html" class="bottom">Previous : Variation 24</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_one.html" class="bottom">Next : Variation 1</a>
+</nav>
 <!--
 <body>
   <p class="animated  bounce">Think that snow is <b>falling.</b></p>
