--- a/var_twentyone.html
+++ b/var_twentyone.html
@@ -6,7 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="varcss.css">
 </head>
+
+<nav>
+  <a href="var_twenty.html" class="bottom">Previous : Variation 20</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twentytwo.html" class="bottom">Next : Variation 22</a>
+</nav>
 
 <body style="text-align: center;background-color: rgb(184, 248, 255 );">
 
