--- a/var_twentythree.html
+++ b/var_twentythree.html
@@ -6,8 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="varcss.css">
 </head>
-
+<nav>
+  <a href="var_twentytwo.html" class="bottom">Previous : Variation 22</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twentyfour.html" class="bottom">Next : Variation 24</a>
+</nav>
 <body style="text-align: center;background-color: rgb(192, 82, 244);">
 
   <p class="animated rollIn">Think that snow is <b>falling.</b></p>
