--- a/var_twentytwo.html
+++ b/var_twentytwo.html
@@ -6,8 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="varcss.css">
 </head>
-
+<nav>
+  <a href="var_twentyone.html" class="bottom">Previous : Variation 21</a>
+  <a href="var_home.html" class="bottom home">Home</a>
+  <a href="var_twentythree.html" class="bottom">Next : Variation 23</a>
+</nav>
 <body style="text-align: center;background-color: rgb(150, 161, 245);">
   <p class="animated infinite zoomInDown">Think that snow is <b>falling.</b></p>
   <p class="animated infinite zoomInLeft">Think that snow is <b> falling everywhere</b> all the time.</p>
